Added another story, adding montserrat font

--- a/client_server_src/client/public/index.html
+++ b/client_server_src/client/public/index.html
@@ -26,9 +26,10 @@
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://overpass-30e2.kxcdn.com/overpass.css">
-    <title>React App</title>
+    <title> Draw Chat </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
